[package]
name = "bt-hci-linux"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Linux integration with bt-hci"
repository = "https://github.com/embassy-rs/trouble"
keywords = ["no-std"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
documentation = "https://docs.embassy.dev/trouble-host"

[dependencies]
tokio = { version = "1", features = ["io-util", "net", "rt", "macros", "signal", "sync"] }
embedded-io = { version = "0.6.1", features = ["std"] }
libc = "0.2"
bt-hci = "0.5"
embassy-time = { version = "0.5", features = ["std", "generic-queue-8"] }
rand = { version = "0.8.5", features = ["getrandom"] }
env_logger = "0.11"
log = "0.4"
critical-section = { version = "1", features = ["std"] }
