[package]
name = "trouble-core"
version = "0.1.0"
edition = "2021"
description = "A crate name reserved for the trouble project"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
