[package]
name = "trouble-host-macros"
version = "0.1.0"
edition = "2021"
description = "Macros for trouble-host types"
license = "Apache-2.0 or MIT"
keywords = [
    "no-std",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
resolver = "2"

[dependencies]
syn = { version = "2.0.15", features = ["full", "extra-traits"] }
quote = "1.0.9"
darling = "0.20.1"
proc-macro2 = "1.0.29"

[lib]
proc-macro = true
