[package]
name = "trouble-host-macros"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "An async Rust BLE host - Derive macros crate"
keywords = ["no-std"]
categories = ["embedded", "hardware-support", "no-std"]

[package.metadata.embassy_docs]
src_base = "https://github.com/embassy-rs/trouble-host-macros/blob/v$VERSION/src/"
src_base_git = "https://github.com/embassy-rs/trouble-host-macros/blob/$COMMIT/src/"
target = "thumbv7em-none-eabi"

[dependencies]
syn = { version = "^2", features = ["full", "extra-traits"] }
quote = "1.0.7"
darling = "0.20.10"
proc-macro2 = "1.0.18"
Inflector = "0.11.4"
uuid = "1.10.0"

[lib]
proc-macro = true
