[package]
name = "trouble-host"
version = "0.1.0"
edition = "2021"
description = "An async Rust BLE host"
license = "Apache-2.0 OR MIT"
keywords = ["no-std"]
categories = ["embedded", "hardware-support", "no-std"]
resolver = "2"
readme = "../README.md"
documentation = "https://docs.embassy.dev/trouble-host"
repository = "https://github.com/embassy-rs/trouble"

[package.metadata.embassy_docs]
src_base = "https://github.com/embassy-rs/trouble-host/blob/v$VERSION/src/"
src_base_git = "https://github.com/embassy-rs/trouble-host/blob/$COMMIT/src/"
features = ["defmt", "peripheral", "central", "gatt", "scan", "derive"]
target = "thumbv7em-none-eabi"

[dependencies]
aes = { version = "0.8.2", optional = true }
bt-hci = { version = "0.3", features = ["embassy-time", "uuid"] }
cmac = { version = "0.7.2", optional = true }
embedded-io = { version = "0.6" }
embassy-sync = "0.6.2"
embassy-time = "0.4"
embassy-futures = "0.1"
futures = { version = "0.3", default-features = false }
heapless = "0.8"
trouble-host-macros = { path = "../host-macros", version = "0.1.0", optional = true }
p256 = { version = "0.13.2", default-features = false, features = ["ecdh","arithmetic"], optional = true }
rand_core = "0.6"
rand_chacha = { version = "0.3", default-features = false, optional = true }
static_cell = "2.1.0"
zerocopy = "0.8.21"

# Logging
log = { version = "0.4.16", optional = true }
defmt = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = [
  "time",
  "rt-multi-thread",
  "macros",
] }
embedded-io-adapters = { version = "0.6.1", features = ["tokio-1"] }
embedded-io = { version = "0.6.1" }
tokio-serial = "5.4"
env_logger = "0.11"
critical-section = { version = "1", features = ["std"] }  # needed for CI builds
rand = "0.8.5"
rand_core = { version = "0.6", features = ["getrandom"]}
heapless = "0.8.0"
embassy-executor = { version = "0.7", features = ["arch-std", "executor-thread"]}
embassy-time = { version = "0.4", features = ["std"]}


[features]
defmt = ["dep:defmt", "embassy-time/defmt", "bt-hci/defmt"]
log = ["dep:log"]

# Enable peripheral role
peripheral = []
# Enable central role
central = []
# Enable GATT support
gatt = []
# Enable scan support
scan = []
# Enable macros
derive = ["trouble-host-macros"]
# Enable controller-to-host flow control
controller-host-flow-control = []
# Enable additional connection metrics
connection-metrics = []
security = [ "dep:p256", "dep:aes", "dep:cmac", "dep:rand_chacha", "gatt" ]
# For development. Disable security manager cryptographically secure pseudorandom number
# generator (CSPRNG) to require a cryptographically secure seed
dev-disable-csprng-seed-requirement = []

default = ["peripheral", "central", "gatt", "derive"]

# BEGIN AUTOGENERATED CONFIG FEATURES
# Generated by gen_config.py. DO NOT EDIT.
connection-event-queue-size-1 = []
connection-event-queue-size-2 = [] # Default
connection-event-queue-size-4 = []
connection-event-queue-size-8 = []
connection-event-queue-size-16 = []
connection-event-queue-size-32 = []
connection-event-queue-size-64 = []

l2cap-rx-queue-size-1 = []
l2cap-rx-queue-size-2 = []
l2cap-rx-queue-size-4 = []
l2cap-rx-queue-size-8 = [] # Default
l2cap-rx-queue-size-16 = []
l2cap-rx-queue-size-32 = []
l2cap-rx-queue-size-64 = []

l2cap-tx-queue-size-1 = []
l2cap-tx-queue-size-2 = []
l2cap-tx-queue-size-4 = []
l2cap-tx-queue-size-8 = [] # Default
l2cap-tx-queue-size-16 = []
l2cap-tx-queue-size-32 = []
l2cap-tx-queue-size-64 = []

l2cap-rx-packet-pool-size-1 = []
l2cap-rx-packet-pool-size-2 = []
l2cap-rx-packet-pool-size-3 = []
l2cap-rx-packet-pool-size-4 = []
l2cap-rx-packet-pool-size-5 = []
l2cap-rx-packet-pool-size-6 = []
l2cap-rx-packet-pool-size-7 = []
l2cap-rx-packet-pool-size-8 = [] # Default
l2cap-rx-packet-pool-size-9 = []
l2cap-rx-packet-pool-size-10 = []
l2cap-rx-packet-pool-size-11 = []
l2cap-rx-packet-pool-size-12 = []
l2cap-rx-packet-pool-size-13 = []
l2cap-rx-packet-pool-size-14 = []
l2cap-rx-packet-pool-size-15 = []
l2cap-rx-packet-pool-size-16 = []
l2cap-rx-packet-pool-size-17 = []
l2cap-rx-packet-pool-size-18 = []
l2cap-rx-packet-pool-size-19 = []
l2cap-rx-packet-pool-size-20 = []
l2cap-rx-packet-pool-size-21 = []
l2cap-rx-packet-pool-size-22 = []
l2cap-rx-packet-pool-size-23 = []
l2cap-rx-packet-pool-size-24 = []
l2cap-rx-packet-pool-size-25 = []
l2cap-rx-packet-pool-size-26 = []
l2cap-rx-packet-pool-size-27 = []
l2cap-rx-packet-pool-size-28 = []
l2cap-rx-packet-pool-size-29 = []
l2cap-rx-packet-pool-size-30 = []
l2cap-rx-packet-pool-size-31 = []
l2cap-rx-packet-pool-size-32 = []
l2cap-rx-packet-pool-size-33 = []
l2cap-rx-packet-pool-size-34 = []
l2cap-rx-packet-pool-size-35 = []
l2cap-rx-packet-pool-size-36 = []
l2cap-rx-packet-pool-size-37 = []
l2cap-rx-packet-pool-size-38 = []
l2cap-rx-packet-pool-size-39 = []
l2cap-rx-packet-pool-size-40 = []
l2cap-rx-packet-pool-size-41 = []
l2cap-rx-packet-pool-size-42 = []
l2cap-rx-packet-pool-size-43 = []
l2cap-rx-packet-pool-size-44 = []
l2cap-rx-packet-pool-size-45 = []
l2cap-rx-packet-pool-size-46 = []
l2cap-rx-packet-pool-size-47 = []
l2cap-rx-packet-pool-size-48 = []
l2cap-rx-packet-pool-size-49 = []
l2cap-rx-packet-pool-size-50 = []
l2cap-rx-packet-pool-size-51 = []
l2cap-rx-packet-pool-size-52 = []
l2cap-rx-packet-pool-size-53 = []
l2cap-rx-packet-pool-size-54 = []
l2cap-rx-packet-pool-size-55 = []
l2cap-rx-packet-pool-size-56 = []
l2cap-rx-packet-pool-size-57 = []
l2cap-rx-packet-pool-size-58 = []
l2cap-rx-packet-pool-size-59 = []
l2cap-rx-packet-pool-size-60 = []
l2cap-rx-packet-pool-size-61 = []
l2cap-rx-packet-pool-size-62 = []
l2cap-rx-packet-pool-size-63 = []
l2cap-rx-packet-pool-size-64 = []
l2cap-rx-packet-pool-size-65 = []
l2cap-rx-packet-pool-size-66 = []
l2cap-rx-packet-pool-size-67 = []
l2cap-rx-packet-pool-size-68 = []
l2cap-rx-packet-pool-size-69 = []
l2cap-rx-packet-pool-size-70 = []
l2cap-rx-packet-pool-size-71 = []
l2cap-rx-packet-pool-size-72 = []
l2cap-rx-packet-pool-size-73 = []
l2cap-rx-packet-pool-size-74 = []
l2cap-rx-packet-pool-size-75 = []
l2cap-rx-packet-pool-size-76 = []
l2cap-rx-packet-pool-size-77 = []
l2cap-rx-packet-pool-size-78 = []
l2cap-rx-packet-pool-size-79 = []
l2cap-rx-packet-pool-size-80 = []
l2cap-rx-packet-pool-size-81 = []
l2cap-rx-packet-pool-size-82 = []
l2cap-rx-packet-pool-size-83 = []
l2cap-rx-packet-pool-size-84 = []
l2cap-rx-packet-pool-size-85 = []
l2cap-rx-packet-pool-size-86 = []
l2cap-rx-packet-pool-size-87 = []
l2cap-rx-packet-pool-size-88 = []
l2cap-rx-packet-pool-size-89 = []
l2cap-rx-packet-pool-size-90 = []
l2cap-rx-packet-pool-size-91 = []
l2cap-rx-packet-pool-size-92 = []
l2cap-rx-packet-pool-size-93 = []
l2cap-rx-packet-pool-size-94 = []
l2cap-rx-packet-pool-size-95 = []
l2cap-rx-packet-pool-size-96 = []
l2cap-rx-packet-pool-size-97 = []
l2cap-rx-packet-pool-size-98 = []
l2cap-rx-packet-pool-size-99 = []
l2cap-rx-packet-pool-size-100 = []

l2cap-tx-packet-pool-size-1 = []
l2cap-tx-packet-pool-size-2 = []
l2cap-tx-packet-pool-size-3 = []
l2cap-tx-packet-pool-size-4 = []
l2cap-tx-packet-pool-size-5 = []
l2cap-tx-packet-pool-size-6 = []
l2cap-tx-packet-pool-size-7 = []
l2cap-tx-packet-pool-size-8 = [] # Default
l2cap-tx-packet-pool-size-9 = []
l2cap-tx-packet-pool-size-10 = []
l2cap-tx-packet-pool-size-11 = []
l2cap-tx-packet-pool-size-12 = []
l2cap-tx-packet-pool-size-13 = []
l2cap-tx-packet-pool-size-14 = []
l2cap-tx-packet-pool-size-15 = []
l2cap-tx-packet-pool-size-16 = []
l2cap-tx-packet-pool-size-17 = []
l2cap-tx-packet-pool-size-18 = []
l2cap-tx-packet-pool-size-19 = []
l2cap-tx-packet-pool-size-20 = []
l2cap-tx-packet-pool-size-21 = []
l2cap-tx-packet-pool-size-22 = []
l2cap-tx-packet-pool-size-23 = []
l2cap-tx-packet-pool-size-24 = []
l2cap-tx-packet-pool-size-25 = []
l2cap-tx-packet-pool-size-26 = []
l2cap-tx-packet-pool-size-27 = []
l2cap-tx-packet-pool-size-28 = []
l2cap-tx-packet-pool-size-29 = []
l2cap-tx-packet-pool-size-30 = []
l2cap-tx-packet-pool-size-31 = []
l2cap-tx-packet-pool-size-32 = []
l2cap-tx-packet-pool-size-33 = []
l2cap-tx-packet-pool-size-34 = []
l2cap-tx-packet-pool-size-35 = []
l2cap-tx-packet-pool-size-36 = []
l2cap-tx-packet-pool-size-37 = []
l2cap-tx-packet-pool-size-38 = []
l2cap-tx-packet-pool-size-39 = []
l2cap-tx-packet-pool-size-40 = []
l2cap-tx-packet-pool-size-41 = []
l2cap-tx-packet-pool-size-42 = []
l2cap-tx-packet-pool-size-43 = []
l2cap-tx-packet-pool-size-44 = []
l2cap-tx-packet-pool-size-45 = []
l2cap-tx-packet-pool-size-46 = []
l2cap-tx-packet-pool-size-47 = []
l2cap-tx-packet-pool-size-48 = []
l2cap-tx-packet-pool-size-49 = []
l2cap-tx-packet-pool-size-50 = []
l2cap-tx-packet-pool-size-51 = []
l2cap-tx-packet-pool-size-52 = []
l2cap-tx-packet-pool-size-53 = []
l2cap-tx-packet-pool-size-54 = []
l2cap-tx-packet-pool-size-55 = []
l2cap-tx-packet-pool-size-56 = []
l2cap-tx-packet-pool-size-57 = []
l2cap-tx-packet-pool-size-58 = []
l2cap-tx-packet-pool-size-59 = []
l2cap-tx-packet-pool-size-60 = []
l2cap-tx-packet-pool-size-61 = []
l2cap-tx-packet-pool-size-62 = []
l2cap-tx-packet-pool-size-63 = []
l2cap-tx-packet-pool-size-64 = []
l2cap-tx-packet-pool-size-65 = []
l2cap-tx-packet-pool-size-66 = []
l2cap-tx-packet-pool-size-67 = []
l2cap-tx-packet-pool-size-68 = []
l2cap-tx-packet-pool-size-69 = []
l2cap-tx-packet-pool-size-70 = []
l2cap-tx-packet-pool-size-71 = []
l2cap-tx-packet-pool-size-72 = []
l2cap-tx-packet-pool-size-73 = []
l2cap-tx-packet-pool-size-74 = []
l2cap-tx-packet-pool-size-75 = []
l2cap-tx-packet-pool-size-76 = []
l2cap-tx-packet-pool-size-77 = []
l2cap-tx-packet-pool-size-78 = []
l2cap-tx-packet-pool-size-79 = []
l2cap-tx-packet-pool-size-80 = []
l2cap-tx-packet-pool-size-81 = []
l2cap-tx-packet-pool-size-82 = []
l2cap-tx-packet-pool-size-83 = []
l2cap-tx-packet-pool-size-84 = []
l2cap-tx-packet-pool-size-85 = []
l2cap-tx-packet-pool-size-86 = []
l2cap-tx-packet-pool-size-87 = []
l2cap-tx-packet-pool-size-88 = []
l2cap-tx-packet-pool-size-89 = []
l2cap-tx-packet-pool-size-90 = []
l2cap-tx-packet-pool-size-91 = []
l2cap-tx-packet-pool-size-92 = []
l2cap-tx-packet-pool-size-93 = []
l2cap-tx-packet-pool-size-94 = []
l2cap-tx-packet-pool-size-95 = []
l2cap-tx-packet-pool-size-96 = []
l2cap-tx-packet-pool-size-97 = []
l2cap-tx-packet-pool-size-98 = []
l2cap-tx-packet-pool-size-99 = []
l2cap-tx-packet-pool-size-100 = []

gatt-client-notification-max-subscribers-1 = [] # Default
gatt-client-notification-max-subscribers-2 = []
gatt-client-notification-max-subscribers-4 = []
gatt-client-notification-max-subscribers-8 = []
gatt-client-notification-max-subscribers-16 = []
gatt-client-notification-max-subscribers-32 = []
gatt-client-notification-max-subscribers-64 = []
gatt-client-notification-max-subscribers-128 = []
gatt-client-notification-max-subscribers-256 = []
gatt-client-notification-max-subscribers-512 = []

gatt-client-notification-queue-size-1 = [] # Default
gatt-client-notification-queue-size-2 = []
gatt-client-notification-queue-size-4 = []
gatt-client-notification-queue-size-8 = []
gatt-client-notification-queue-size-16 = []
gatt-client-notification-queue-size-32 = []
gatt-client-notification-queue-size-64 = []
gatt-client-notification-queue-size-128 = []
gatt-client-notification-queue-size-256 = []
gatt-client-notification-queue-size-512 = []

# END AUTOGENERATED CONFIG FEATURES
