[package]
name = "trouble-host"
version = "0.1.0"
edition = "2021"
description = "An async Rust BLE host"
license = "Apache-2.0 OR MIT"
keywords = ["no-std"]
categories = ["embedded", "hardware-support", "no-std"]
resolver = "2"
readme = "../README.md"
documentation = "https://docs.embassy.dev/trouble-host"
repository = "https://github.com/embassy-rs/trouble"

[package.metadata.embassy_docs]
src_base = "https://github.com/embassy-rs/trouble-host/blob/v$VERSION/src/"
src_base_git = "https://github.com/embassy-rs/trouble-host/blob/$COMMIT/src/"
features = ["defmt", "peripheral", "central", "gatt", "scan", "derive"]
target = "thumbv7em-none-eabi"

[dependencies]
aes = { version = "0.8.2", optional = true }
bt-hci = { version = "0.3", features = ["embassy-time", "uuid"] }
cmac = { version = "0.7.2", optional = true }
embedded-io = { version = "0.6" }
embassy-sync = "0.6.2"
embassy-time = "0.4"
embassy-futures = "0.1"
futures = { version = "0.3", default-features = false }
heapless = "0.8"
trouble-host-macros = { path = "../host-macros", version = "0.1.0", optional = true }
p256 = { version = "0.13.2", default-features = false, features = ["ecdh","arithmetic"], optional = true }
rand_core = "0.6"
rand_chacha = { version = "0.3", default-features = false, optional = true }
static_cell = "2.1.0"
zerocopy = "0.8.21"

# Logging
log = { version = "0.4.16", optional = true }
defmt = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = [
  "time",
  "rt-multi-thread",
  "macros",
] }
embedded-io-adapters = { version = "0.6.1", features = ["tokio-1"] }
embedded-io = { version = "0.6.1" }
tokio-serial = "5.4"
env_logger = "0.11"
critical-section = { version = "1", features = ["std"] }  # needed for CI builds
rand = "0.8.5"
rand_core = { version = "0.6", features = ["getrandom"]}
heapless = "0.8.0"
embassy-executor = { version = "0.7", features = ["arch-std", "executor-thread"]}
embassy-time = { version = "0.4", features = ["std"]}


[features]
defmt = ["dep:defmt", "embassy-time/defmt", "bt-hci/defmt"]
log = ["dep:log"]

# Enable peripheral role
peripheral = []
# Enable central role
central = []
# Enable GATT support
gatt = []
# Enable scan support
scan = []
# Enable macros
derive = ["trouble-host-macros"]
# Enable controller-to-host flow control
controller-host-flow-control = []
# Enable additional connection metrics
connection-metrics = []
# Enable additional channel metrics
channel-metrics = []
security = [ "dep:p256", "dep:aes", "dep:cmac", "dep:rand_chacha", "gatt" ]
# For development. Disable security manager cryptographically secure pseudorandom number
# generator (CSPRNG) to require a cryptographically secure seed
dev-disable-csprng-seed-requirement = []

# Default packet pool. Enabling this will make available a packet pool tuned according to the default-packet-pool-mtu and defeault-packet-pool-mtu.
default-packet-pool = []

# Optimization where l2cap SDU reassembly saves some buffer copy.
l2cap-sdu-reassembly-optimization = []

default = ["peripheral", "central", "gatt", "derive", "default-packet-pool"]

# BEGIN AUTOGENERATED CONFIG FEATURES
# Generated by gen_config.py. DO NOT EDIT.
connection-event-queue-size-1 = [] # Controls the size of the per-connection event queue. The event queue notifies of disconnects and changes to the connection
connection-event-queue-size-2 = [] # DefaultControls the size of the per-connection event queue. The event queue notifies of disconnects and changes to the connection
connection-event-queue-size-4 = [] # Controls the size of the per-connection event queue. The event queue notifies of disconnects and changes to the connection
connection-event-queue-size-8 = [] # Controls the size of the per-connection event queue. The event queue notifies of disconnects and changes to the connection
connection-event-queue-size-16 = [] # Controls the size of the per-connection event queue. The event queue notifies of disconnects and changes to the connection
connection-event-queue-size-32 = [] # Controls the size of the per-connection event queue. The event queue notifies of disconnects and changes to the connection
connection-event-queue-size-64 = [] # Controls the size of the per-connection event queue. The event queue notifies of disconnects and changes to the connection

l2cap-rx-queue-size-1 = [] # Controls the size of the L2CAP inbound queue per channel. The size of the queue impacts how many packets you can have in flight for each L2CAP channel. Keep in mind that the packet pool size might need to be adjusted as well.
l2cap-rx-queue-size-2 = [] # Controls the size of the L2CAP inbound queue per channel. The size of the queue impacts how many packets you can have in flight for each L2CAP channel. Keep in mind that the packet pool size might need to be adjusted as well.
l2cap-rx-queue-size-4 = [] # Controls the size of the L2CAP inbound queue per channel. The size of the queue impacts how many packets you can have in flight for each L2CAP channel. Keep in mind that the packet pool size might need to be adjusted as well.
l2cap-rx-queue-size-8 = [] # DefaultControls the size of the L2CAP inbound queue per channel. The size of the queue impacts how many packets you can have in flight for each L2CAP channel. Keep in mind that the packet pool size might need to be adjusted as well.
l2cap-rx-queue-size-16 = [] # Controls the size of the L2CAP inbound queue per channel. The size of the queue impacts how many packets you can have in flight for each L2CAP channel. Keep in mind that the packet pool size might need to be adjusted as well.
l2cap-rx-queue-size-32 = [] # Controls the size of the L2CAP inbound queue per channel. The size of the queue impacts how many packets you can have in flight for each L2CAP channel. Keep in mind that the packet pool size might need to be adjusted as well.
l2cap-rx-queue-size-64 = [] # Controls the size of the L2CAP inbound queue per channel. The size of the queue impacts how many packets you can have in flight for each L2CAP channel. Keep in mind that the packet pool size might need to be adjusted as well.

l2cap-tx-queue-size-1 = [] # Controls the size of the L2CAP outbound queue per channel. The size of the queue impacts how many packets you can have in flight for each L2CAP channel. Keep in mind that the packet pool size might need to be adjusted as well.
l2cap-tx-queue-size-2 = [] # Controls the size of the L2CAP outbound queue per channel. The size of the queue impacts how many packets you can have in flight for each L2CAP channel. Keep in mind that the packet pool size might need to be adjusted as well.
l2cap-tx-queue-size-4 = [] # Controls the size of the L2CAP outbound queue per channel. The size of the queue impacts how many packets you can have in flight for each L2CAP channel. Keep in mind that the packet pool size might need to be adjusted as well.
l2cap-tx-queue-size-8 = [] # DefaultControls the size of the L2CAP outbound queue per channel. The size of the queue impacts how many packets you can have in flight for each L2CAP channel. Keep in mind that the packet pool size might need to be adjusted as well.
l2cap-tx-queue-size-16 = [] # Controls the size of the L2CAP outbound queue per channel. The size of the queue impacts how many packets you can have in flight for each L2CAP channel. Keep in mind that the packet pool size might need to be adjusted as well.
l2cap-tx-queue-size-32 = [] # Controls the size of the L2CAP outbound queue per channel. The size of the queue impacts how many packets you can have in flight for each L2CAP channel. Keep in mind that the packet pool size might need to be adjusted as well.
l2cap-tx-queue-size-64 = [] # Controls the size of the L2CAP outbound queue per channel. The size of the queue impacts how many packets you can have in flight for each L2CAP channel. Keep in mind that the packet pool size might need to be adjusted as well.

default-packet-pool-size-1 = [] # Controls the pool size of the default packet pool, if enabled. This significantly impacts the RAM usage. The RAM usage from adjusting this setting will be the MTU * pool size.
default-packet-pool-size-2 = [] # Controls the pool size of the default packet pool, if enabled. This significantly impacts the RAM usage. The RAM usage from adjusting this setting will be the MTU * pool size.
default-packet-pool-size-4 = [] # Controls the pool size of the default packet pool, if enabled. This significantly impacts the RAM usage. The RAM usage from adjusting this setting will be the MTU * pool size.
default-packet-pool-size-8 = [] # Controls the pool size of the default packet pool, if enabled. This significantly impacts the RAM usage. The RAM usage from adjusting this setting will be the MTU * pool size.
default-packet-pool-size-16 = [] # DefaultControls the pool size of the default packet pool, if enabled. This significantly impacts the RAM usage. The RAM usage from adjusting this setting will be the MTU * pool size.
default-packet-pool-size-32 = [] # Controls the pool size of the default packet pool, if enabled. This significantly impacts the RAM usage. The RAM usage from adjusting this setting will be the MTU * pool size.
default-packet-pool-size-64 = [] # Controls the pool size of the default packet pool, if enabled. This significantly impacts the RAM usage. The RAM usage from adjusting this setting will be the MTU * pool size.
default-packet-pool-size-128 = [] # Controls the pool size of the default packet pool, if enabled. This significantly impacts the RAM usage. The RAM usage from adjusting this setting will be the MTU * pool size.

default-packet-pool-mtu-27 = [] # Controls the packet MTU of the default packet pool, if enabled. This significantly impacts the RAM usage. The RAM usage from adjusting this setting will be the MTU * pool size.
default-packet-pool-mtu-48 = [] # Controls the packet MTU of the default packet pool, if enabled. This significantly impacts the RAM usage. The RAM usage from adjusting this setting will be the MTU * pool size.
default-packet-pool-mtu-64 = [] # Controls the packet MTU of the default packet pool, if enabled. This significantly impacts the RAM usage. The RAM usage from adjusting this setting will be the MTU * pool size.
default-packet-pool-mtu-128 = [] # Controls the packet MTU of the default packet pool, if enabled. This significantly impacts the RAM usage. The RAM usage from adjusting this setting will be the MTU * pool size.
default-packet-pool-mtu-251 = [] # Controls the packet MTU of the default packet pool, if enabled. This significantly impacts the RAM usage. The RAM usage from adjusting this setting will be the MTU * pool size.
default-packet-pool-mtu-255 = [] # DefaultControls the packet MTU of the default packet pool, if enabled. This significantly impacts the RAM usage. The RAM usage from adjusting this setting will be the MTU * pool size.
default-packet-pool-mtu-512 = [] # Controls the packet MTU of the default packet pool, if enabled. This significantly impacts the RAM usage. The RAM usage from adjusting this setting will be the MTU * pool size.
default-packet-pool-mtu-1024 = [] # Controls the packet MTU of the default packet pool, if enabled. This significantly impacts the RAM usage. The RAM usage from adjusting this setting will be the MTU * pool size.

gatt-client-notification-max-subscribers-1 = [] # DefaultWhen using the GATT client, this controls how many subscribers can be created.
gatt-client-notification-max-subscribers-2 = [] # When using the GATT client, this controls how many subscribers can be created.
gatt-client-notification-max-subscribers-4 = [] # When using the GATT client, this controls how many subscribers can be created.
gatt-client-notification-max-subscribers-8 = [] # When using the GATT client, this controls how many subscribers can be created.
gatt-client-notification-max-subscribers-16 = [] # When using the GATT client, this controls how many subscribers can be created.
gatt-client-notification-max-subscribers-32 = [] # When using the GATT client, this controls how many subscribers can be created.
gatt-client-notification-max-subscribers-64 = [] # When using the GATT client, this controls how many subscribers can be created.
gatt-client-notification-max-subscribers-128 = [] # When using the GATT client, this controls how many subscribers can be created.
gatt-client-notification-max-subscribers-256 = [] # When using the GATT client, this controls how many subscribers can be created.
gatt-client-notification-max-subscribers-512 = [] # When using the GATT client, this controls how many subscribers can be created.

gatt-client-notification-queue-size-1 = [] # DefaultWhen using the GATT client, this controls how many notifications can be queued for each subscriber.
gatt-client-notification-queue-size-2 = [] # When using the GATT client, this controls how many notifications can be queued for each subscriber.
gatt-client-notification-queue-size-4 = [] # When using the GATT client, this controls how many notifications can be queued for each subscriber.
gatt-client-notification-queue-size-8 = [] # When using the GATT client, this controls how many notifications can be queued for each subscriber.
gatt-client-notification-queue-size-16 = [] # When using the GATT client, this controls how many notifications can be queued for each subscriber.
gatt-client-notification-queue-size-32 = [] # When using the GATT client, this controls how many notifications can be queued for each subscriber.
gatt-client-notification-queue-size-64 = [] # When using the GATT client, this controls how many notifications can be queued for each subscriber.
gatt-client-notification-queue-size-128 = [] # When using the GATT client, this controls how many notifications can be queued for each subscriber.
gatt-client-notification-queue-size-256 = [] # When using the GATT client, this controls how many notifications can be queued for each subscriber.
gatt-client-notification-queue-size-512 = [] # When using the GATT client, this controls how many notifications can be queued for each subscriber.

# END AUTOGENERATED CONFIG FEATURES
