[package]
name = "trouble-host"
version = "0.4.0"
edition = "2021"
description = "An async Rust BLE host"
license = "Apache-2.0 OR MIT"
keywords = ["no-std"]
categories = ["embedded", "hardware-support", "no-std"]
resolver = "2"
readme = "../README.md"
documentation = "https://docs.embassy.dev/trouble-host"
repository = "https://github.com/embassy-rs/trouble"

[package.metadata.embassy_docs]
src_base = "https://github.com/embassy-rs/trouble-host/blob/v$VERSION/src/"
src_base_git = "https://github.com/embassy-rs/trouble-host/blob/$COMMIT/src/"
features = ["defmt", "peripheral", "central", "gatt", "scan", "derive"]
target = "thumbv7em-none-eabi"

[dependencies]
aes = { version = "0.8.2", optional = true }
bt-hci = { version = "0.6", features = ["uuid"] }
cmac = { version = "0.7.2", optional = true }
embedded-io = { version = "0.6" }
embassy-sync = "0.7"
embassy-time = "0.5"
embassy-futures = "0.1"
futures = { version = "0.3", default-features = false }
heapless = "0.9"  # "gatt", "security" need it
trouble-host-macros = { path = "../host-macros", version = "0.3.0", optional = true }
p256 = { version = "0.13.2", default-features = false, features = ["ecdh","arithmetic"], optional = true }
rand = { version="0.8", default-features = false, optional = true }
rand_core = "0.6"
rand_chacha = { version = "0.3", default-features = false, optional = true }
static_cell = "2.1.0"
zerocopy = "0.8.21"

# Logging
log = { version = "0.4.16", optional = true }
defmt = { version = "1.0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = [
  "time",
  "rt-multi-thread",
  "macros",
] }
embedded-io-adapters = { version = "0.6.1", features = ["tokio-1"] }
embedded-io = { version = "0.6.1" }
tokio-serial = "5.4"
env_logger = "0.11"
critical-section = { version = "1", features = ["std"] }  # needed for CI builds
rand = "0.8.5"
rand_core = { version = "0.6", features = ["getrandom"] }
embassy-time = { version = "0.5", features = ["std", "generic-queue-8"] }

[features]
defmt = ["dep:defmt", "embassy-time/defmt", "bt-hci/defmt"]
log = ["dep:log"]

# Enable peripheral role
peripheral = []
# Enable central role
central = []
# Enable GATT support
gatt = []
# Enable scan support
scan = ["central"]
# Enable macros
derive = ["trouble-host-macros"]
# Enable controller-to-host flow control
controller-host-flow-control = []
# Enable additional connection metrics
connection-metrics = []
# Enable additional channel metrics
channel-metrics = []
security = [ "dep:p256", "dep:aes", "dep:cmac", "dep:rand_chacha", "gatt", "dep:rand" ]
# For development. Disable security manager cryptographically secure pseudorandom number
# generator (CSPRNG) to require a cryptographically secure seed
dev-disable-csprng-seed-requirement = []

# Enabling this will make available a packet pool tuned according to the default-packet-pool-mtu and default-packet-pool-size.
default-packet-pool = []

# Optimization where l2cap SDU reassembly saves some buffer copy.
l2cap-sdu-reassembly-optimization = []

default = ["peripheral", "central", "gatt", "derive", "default-packet-pool"]


# BEGIN AUTOGENERATED CONFIG FEATURES
# Generated by gen_config.py. DO NOT EDIT.
# Most of these features are explained in detail in the Trouble Book.

# Controls the size of the per-connection event queue.
connection-event-queue-size-1 = []
connection-event-queue-size-2 = [] # Default
connection-event-queue-size-4 = []
connection-event-queue-size-8 = []
connection-event-queue-size-16 = []
connection-event-queue-size-32 = []
connection-event-queue-size-64 = []

# Controls the size of the L2CAP inbound queue per channel.
l2cap-rx-queue-size-1 = []
l2cap-rx-queue-size-2 = []
l2cap-rx-queue-size-4 = []
l2cap-rx-queue-size-8 = [] # Default
l2cap-rx-queue-size-16 = []
l2cap-rx-queue-size-32 = []
l2cap-rx-queue-size-64 = []

# Controls the size of the L2CAP outbound queue per channel.
l2cap-tx-queue-size-1 = []
l2cap-tx-queue-size-2 = []
l2cap-tx-queue-size-4 = []
l2cap-tx-queue-size-8 = [] # Default
l2cap-tx-queue-size-16 = []
l2cap-tx-queue-size-32 = []
l2cap-tx-queue-size-64 = []

# Controls the pool size of the default packet pool, if enabled.
default-packet-pool-size-1 = ["default-packet-pool"]
default-packet-pool-size-2 = ["default-packet-pool"]
default-packet-pool-size-4 = ["default-packet-pool"]
default-packet-pool-size-8 = ["default-packet-pool"]
default-packet-pool-size-16 = ["default-packet-pool"] # Default
default-packet-pool-size-32 = ["default-packet-pool"]
default-packet-pool-size-64 = ["default-packet-pool"]
default-packet-pool-size-128 = ["default-packet-pool"]

# Controls the packet MTU of the default packet pool, if enabled.
default-packet-pool-mtu-27 = ["default-packet-pool"]
default-packet-pool-mtu-48 = ["default-packet-pool"]
default-packet-pool-mtu-64 = ["default-packet-pool"]
default-packet-pool-mtu-128 = ["default-packet-pool"]
default-packet-pool-mtu-251 = ["default-packet-pool"] # Default
default-packet-pool-mtu-255 = ["default-packet-pool"]
default-packet-pool-mtu-512 = ["default-packet-pool"]
default-packet-pool-mtu-1024 = ["default-packet-pool"]

# When using the GATT client, this controls how many subscribers can be created.
gatt-client-notification-max-subscribers-1 = [] # Default
gatt-client-notification-max-subscribers-2 = []
gatt-client-notification-max-subscribers-4 = []
gatt-client-notification-max-subscribers-8 = []
gatt-client-notification-max-subscribers-16 = []
gatt-client-notification-max-subscribers-32 = []
gatt-client-notification-max-subscribers-64 = []
gatt-client-notification-max-subscribers-128 = []
gatt-client-notification-max-subscribers-256 = []
gatt-client-notification-max-subscribers-512 = []

# When using the GATT client, this controls how many notifications can be queued for each subscriber.
gatt-client-notification-queue-size-1 = [] # Default
gatt-client-notification-queue-size-2 = []
gatt-client-notification-queue-size-4 = []
gatt-client-notification-queue-size-8 = []
gatt-client-notification-queue-size-16 = []
gatt-client-notification-queue-size-32 = []
gatt-client-notification-queue-size-64 = []
gatt-client-notification-queue-size-128 = []
gatt-client-notification-queue-size-256 = []
gatt-client-notification-queue-size-512 = []

# END AUTOGENERATED CONFIG FEATURES
